# ZENO

./: .gitignore  README.md
Arkworks/: README.md
Arkworks/gm17/src/: r1cs_to_sap.rs
Arkworks/gm17/src/generator/: generic.rs
Arkworks/groth16/src/generator/: generic.rs
Arkworks/groth16/src/prover/: generic.rs
Arkworks/r1cs-core/src/: constraint_system.rs  lib.rs
Arkworks/r1cs-std/src/bits/: boolean.rs
Arkworks/r1cs-std/src/fields/fp/: mod.rs
ZENO-engine/: README.md
ZENO-engine/groth16/src/: r1cs_to_qap.rs
ZENO-engine/groth16/src/generator/: generic.rs
ZENO-engine/groth16/src/prover/: generic.rs  mod.rs
ZENO-engine/r1cs-core/: Cargo.toml
ZENO-engine/r1cs-core/src/: constraint_system.rs
ZENO-engine/r1cs-std/src/: lib.rs
ZENO-engine/r1cs-std/src/fields/fp/: cmp.rs  mod.rs
zkNN-circuit/all-optimizations/: Cargo.toml  run.sh
zkNN-circuit/all-optimizations/src/: avg_pool_circuit.rs  backup.rs  both_private_circuit.rs  conv_circuit.rs  demo_circuit.rs  full_circuit.rs  lenet_circuit.rs  lib.rs  mul_circuit.rs  pedersen_commit.rs  relu_circuit.rs  residual_add_circuit.rs  resnet18_both_private_circuit.rs  resnet18_circuit.rs  resnet50_circuit.rs  vanilla.rs  vgg_both_private_circuit.rs  vgg_circuit.rs
zkNN-circuit/baseline-both-private/: Cargo.toml  README.md  run.sh
zkNN-circuit/baseline-both-private/src/: conv_circuit.rs  mul_circuit.rs
zkNN-circuit/baseline-one-private/: README.md  run.sh
zkNN-circuit/baseline-one-private/src/: avg_pool_circuit.rs  conv_circuit.rs  mul_circuit.rs  pedersen_commit.rs  relu_circuit.rs
