[package]
name = "zk-ml"
version = "0.1.0"
authors = ["Anonymous Robotics"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://github.com/Ash-Zheng/zexe.git
# https://github.com/brucechin/zexe.git

[dependencies]
num = "0.3"
fast-math = "0.1"
algebra = { path = "../../Arkworks/algebra", features = ["asm", "bls12_381", "ed_on_bls12_381"]}
algebra-core = { path = "../../Arkworks/algebra-core", features = ["llvm_asm"]}
crypto-primitives = { path = "../../Arkworks/crypto-primitives" }


rand_chacha = "0.2.2"
rand = "0.7.3"
rand_xorshift = { version = "0.2" }
blake2 = { version = "0.8", default-features = false }
sha2 = "0.9.1"
merkle = "1.11"
ring = "0.16.15"

ff-fft = { path = "../../Arkworks/ff-fft", default-features = false }
gm17 = { path = "../../Arkworks/gm17", optional = true, default-features = false }
groth16 = { path = "../../Arkworks/groth16"}
r1cs-core = { path = "../../Arkworks/r1cs-core", features = ["std"] }
r1cs-std = { path = "../../Arkworks/r1cs-std", features = ["ed_on_bls12_381"] }

tracing = { version = "0.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.2", default-features = false, optional = true }

num-traits = "0.2"
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = "0.3"

